fix(mathjax): escape key char to avoid conflicts wihth Mermaid graphs definition

--- a/layouts/partials/mathjax_support.html
+++ b/layouts/partials/mathjax_support.html
@@ -4,7 +4,7 @@
   MathJax = {
     tex: {
       inlineMath: [['$', '$'], ['\\(', '\\)']],
-      displayMath: [['$$', '$$'], ['\[', '\]']]
+      displayMath: [['$$', '$$'], ['\\[', '\\]']]
     }
   };
 </script>
